Show soccer fields list

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,7 @@ en:
       help: "Help"
       users: "Users"
       login: "Log in"
+      soccer_fields: "Soccer Fields"
   static_pages:
     home:
       home: "Home"
