--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -13,6 +13,7 @@ vi:
       help: "Trợ giúp"
       users: "Người dùng"
       login: "Đăng nhập"
+      soccer_fields: "Sân bóng"
   static_pages:
     home:
       home: "Trang chủ"
