--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -95,12 +95,28 @@ vi:
   users:
     new:
       heading: "Đăng ký"
-      form:
-        name: "Tên"
-        email: "Email"
-        password: "Mật khẩu"
-        password_confirm: "Xác nhận mật khẩu"
-        create: "Tạo tài khoản"
+      create: "Tạo tài khoản"
+    form:
+      name: "Tên"
+      email: "Email"
+      password: "Mật khẩu"
+      password_confirm: "Xác nhận mật khẩu"
+    edit:
+      edit: "Chỉnh sửa thông tin"
+      save_changes: "Lưu thay đổi"
+      intro: "Chỉnh sửa thông tin"
+      danger: "Hãy đăng nhập"
+      incorrect_user: "Bạn không thể  sửa thông tin của người khác"
+      change: "Thay đổi"
+    index:
+      index_title: "Tất cả người dùng"
+    destroy:
+      user_deleted: "Đã xóa người dùng"
+      delete_fail: "Xóa người dùng thất bại"
+      incorrect_admin: "Bạn không phải là admin"
+    user:
+      delete: "xóa"
+      comfirm: "Bạn chắc chắn muốn xóa ?"
     show:
       user_not_found: "Không tìm thấy người dùng"
     create:
