--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,4 +1,6 @@
 vi:
+  delete: "xóa"
+  you_sure: "Bạn chắc chắn chứ?"
   admin:
     layouts:
       header:
@@ -31,6 +33,7 @@ vi:
         field_type: "Loại sân"
         rate: "Đánh giá"
         hour_price: "Giá theo giờ"
+        image: "Hình ảnh"
         create_button: "Tạo sân"
         5-a-side: "5 người"
         7-a-side: "7 người"
@@ -41,6 +44,38 @@ vi:
         failed: "Tạo sân bóng mới không thành công!"
       show:
         not_found: "Không tìm thấy sân bóng"
+      update:
+        success: "Cập nhật thành công"
+        failed: "Cập nhật không thành công"
+      destroy:
+        success: "Xóa không thành công"
+        failed: "Xóa không thành công"
+      edit:
+        title: "Chỉnh sửa"
+        name: "Tên"
+        address: "Địa chỉ"
+        field_type: "Loại sân"
+        rate: "Đánh giá"
+        hour_price: "Giá theo giờ"
+        image: "Hình ảnh"
+        5-a-side: "5 người"
+        7-a-side: "7 người"
+        9-a-side: "9 người"
+        11-a-side: "11 người"
+        save_button: "Lưu thay đổi"
+        replace: "Nhấn vào dưới dây để thay thế "
+      show:
+        title: "Thông tin chi tiết"
+        address: "Địa chỉ"
+        type: "Loại sân"
+        rate: "Đánh giá"
+        hour_price: "Giá theo giờ"
+        a-side: "người"
+        edit_button: "Chỉnh sửa"
+        delete_button: "Xóa"
+        you_sure: "Bạn chắc chắn chứ?"
+      index:
+        title: "Danh sách sân bóng"
   layouts:
     header:
       english: "Tiếng anh"
@@ -102,3 +137,7 @@ vi:
   soccer_fields:
     show:
       not_found: "Không tìm thấy người dùng"
+  models:
+    soccer_field:
+      valid_format: "cần phải đúng định dạng hình ảnh"
+      should_less_than: "cần nhỏ hơn 5MB"
